@@ -51,6 +51,7 @@ Bugs fixed:
 - 3426027 cimAccountPassThrough does not set return code
 - 3498719 Better SSL error reporting for sfcb
 - 3471814 segfault in objectImpl.c:131,ClObjectGetClString
+- 3499930 Check file repository writes
 
 Changes in 1.3.13
 =================
