@@ -1,3 +1,8 @@
+2012-03-08  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* fileRepository.c:
+	[ 3499930 ] Check file repository writes
+
 2012-03-08 Narasimha Sharoff <nsharoff@us.ibm.com>
 
 	* objectImpl.c:
